# floonet-rs

./: Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.yml  flake.nix
.github/workflows/: ci.yml
deploy/: Caddyfile  Caddyfile.compose  floonet-rs.service  install.sh
mixexit/: Cargo.toml
mixexit/src/: main.rs
src/: admission.rs  config.rs  exit.rs  info.rs  lib.rs  main.rs  notice.rs  server.rs
src/name_authority/: mod.rs  names.rs  nip98.rs
src/payment/: goblinpay.rs  mod.rs
src/repo/: postgres.rs  sqlite.rs  sqlite_migration.rs
tests/: cli.rs  conn.rs  name_authority.rs  whitelist.rs
tests/common/: mod.rs
